[package]
name = "stubborn-downloader-rs"
version = "0.1.0"
edition = "2021"
authors = ["kneelawk <kneelawk@gmail.com>"]
description = "Will attempt to restart failed downloads where they left off."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
bytes = "^1.2"
clap = { version = "^3.2", features = ["derive"] }
console = "^0.15"
futures = "^0.3"
futures-util = "^0.3"
indicatif = "^0.17"
lazy_static = "^1.4"
reqwest = { version = "^0.11", features = ["gzip", "brotli", "deflate", "stream"] }
tokio = { version = "1", features = ["full"] }
